# oh-distro

./: .ci_testing.sh  .gitignore  .gitmodules  .project  .pydevproject  .travis.yml  Install_gazebo_and_drcsim.sh  LICENSE.txt  README  README.md  README.rst  README_DEPRECATED.rst  bootstrap.sh  build.sh  install_dependencies.sh  install_gazebo_and_drcsim.sh  where_did_docs_go.txt
catkin_ws/src/atlas_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/hyq_transforms/: CMakeLists.txt  package.xml
catkin_ws/src/ipab_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/oh_translators/: CMakeLists.txt  package.xml
catkin_ws/src/sicktoolbox_wrapper/: CMakeLists.txt  README.txt  package.xml
catkin_ws/src/val_hardware_msgs/: CMakeLists.txt  package.xml
ros_workspace/LCM2ROS_translator/: CMakeLists.txt  mainpage.dox  manifest.xml
ros_workspace/LCM2ROS_translator/src/: ActuatorCmds_translator.cpp  atlasWithHandsPositionCommandTranslator.cpp  configurationCommandTranslator.cpp  positionCommandTranslator.cpp  sandiaPositionCommandTranslator.cpp  syncActuatorCmds_translator.cpp
ros_workspace/atlas_gazebo_plugins_pre_fuerte/: CMakeLists.txt  manifest.xml
ros_workspace/atlas_gazebo_plugins_pre_fuerte/msg/: RobotState.msg
ros_workspace/atlas_gazebo_plugins_pre_fuerte/src/: fourWheeled_diffdrive_plugin.cpp  gazebo_ros_pub_robot_state.cpp  joint_actuation_plugin.cpp
ros_workspace/driving_interface/: .gitignore  CMakeLists.txt
ros_workspace/keyboard_driving/: .gitignore  CMakeLists.txt
ros_workspace/mit_drcsim_plugins/: CMakeLists.txt  mainpage.dox  manifest.xml
ros_workspace/mit_drcsim_plugins/src/: FloatingSandiaHandPlugin.cpp  FloatingSandiaHandPlugin.h  MITRobotPlugin.cc  MITRobotPlugin.cc~  MITRobotPlugin.hh  MITRobotPlugin.hh~  VRCPlugin.cc  VRCPlugin.cpp  VRCPlugin.hh  diffdrive_plugin.cpp  fourWheeled_diffdrive_plugin.cpp  gazebo_ros_pub_robot_state.cpp  joint_actuation_plugin.cpp  planar_hover_plugin.cpp
ros_workspace/ros_fovis/: CMakeLists.txt  Makefile  README  mainpage.dox  manifest.xml
ros_workspace/ros_fovis/cmake/: lcmtypes.cmake
ros_workspace/ros_fovis/config/: sheriff_ros_fovis_stereo.cfg
ros_workspace/ros_fovis/ros_fovis_rgbd/: CMakeLists.txt  ros_fovis_rgbd.cpp
ros_workspace/ros_fovis/ros_fovis_stereo/: CMakeLists.txt  ros_fovis_stereo.cpp
ros_workspace/ros_fovis/ros_stereo2lcm/: CMakeLists.txt  ros_stereo2lcm.cpp
ros_workspace/ros_fovis/ros_stereo2lcm_fuerte/: CMakeLists.txt  ros_stereo2lcm_fuerte.cpp  ros_stereo2lcm_fuerte_single.cpp
ros_workspace/ros_fovis/src/: CMakeLists.txt  ros_fovis.cpp
ros_workspace/sandia-hand/: AUTHORS  CMakeLists.txt  LICENSE  install.sh
ros_workspace/sandia-hand/cmake/: sandia-hand-config.cmake.in
ros_workspace/sandia-hand/firmware/: CMakeLists.txt  INSTRUCTIONS
ros_workspace/sandia-hand/ros/: CMakeLists.txt
ros_workspace/translators/: CMakeLists.txt  manifest.xml
ros_workspace/translators/launch/: cheating.launch  hands_notsim.launch  not_cheating.launch  perception.launch  set_compression.launch
ros_workspace/translators/src/: frequency.cpp  latency.cpp  lcm2ros.cpp  lcm2ros_hands.cpp  my_subscriber.cpp  ros2lcm.cpp  ros2lcm_camera.cpp  ros2lcm_hands.cpp  ros2lcm_individual.cpp  ros2lcm_stereo.cpp
software/action_authoring/: .gitignore  CMakeLists.txt  README
software/action_authoring/src/: Action.cpp  Action.h  Affordance.cpp  Affordance.h  AffordanceRelation.cpp  AffordanceRelation.h  AtomicConstraint.cpp  AtomicConstraint.h  Constraint.cpp  Constraint.h  ConstraintMacro.cpp  ConstraintMacro.h  ConstraintSequence.cpp  ConstraintSequence.h  ConstraintWayPtList.cpp  ConstraintWayPtList.h  DatabaseManager.cpp  DatabaseManager.h  test.cpp  test_database_manager.cpp
software/atlas-collection/: .gitignore  CMakeLists.txt  tobuild.txt
software/atlas-collection/atlas_lcmtypes/: CMakeLists.txt  README
software/atlas-collection/bdi_walking/: CMakeLists.txt  tobuild.txt
software/atlas-collection/ptgrey/: CMakeLists.txt
software/atlas-collection/state_sync_atlas/: CMakeLists.txt
software/control/: .UNITTEST  .cproject  .gitignore  .project  Atlas.m  CMakeLists.txt  COMController.m  CTestConfig.cmake  Doxyfile  Makefile  PinnedEndEffectorControl.m  PinnedReachingControl.m  QPController.m  README  SendTestStateMessage.java  SplineFootstepPlanner.m  StandingAndReachingControl.m  actionAuthoringIKServer.m  add_ctrl_path.m  addpath_control.m  calibratePublish.py  cmake  compass_tripod_pneumo.urdf  cubicSplineFootsteps.m  cubicSplineTraj.m  doorPullBackRight.py  fort.15  fromProne.m  getPDGains.m  ladderLeftArmReach.py  ladderRightArmReach.py  make.m  mexopts.sh  notes.txt  planZMPandFootTrajectory.m  publish_qp_controller_input.py  rm_ctrl_path.m  rmpath_control.m  runAtlasBalance.m  runAtlasControl.m  (+26 more)
software/control/atlas_push/: CMakeLists.txt  README
software/control/collections_utils/: collections.m  plot_lcm.m  plot_lcm_points.m  plot_lcm_poses.m  runMatlabCollections.m  runSendStatus.m  send_controller_status.m  send_status.m  send_utime_two.m
software/control/contact_monitor/: CMakeLists.txt  README
software/control/data/: aa_atlas_fp.mat
software/control/deprecated/: FootstepPlanPublisher.java  JointCommandCoder.java  RobotPlanConstraintCheckedPublisher.java  RobotStateConstraintCheckedCoder.java  StandingAndReachingControl.m  actionAuthoringServer.m  actionAuthoringServer_dev.m  actionAuthoringServer_interactive.m  runAtlasPDcontrol.m  runAtlasReachingExample.m
software/control/depricated/: runAtlasBalance.m  runAtlasPositionControl.m
software/control/doc/: atlas_joint_friction_params.ods  m2cpp.pl
software/control/drc_controller_manager/: CMakeLists.txt  README
software/control/fall_detector/: CMakeLists.txt  (+1 more)
software/ihmc/: CMakeLists.txt  README
software/ipwebcam/: CMakeLists.txt
software/network/: CMakeLists.txt  tobuild.txt
software/planning/: CMakeLists.txt  FPPOutput.m  README
software/state_sync_atlas/: CMakeLists.txt  README
software/viewer/: CMakeLists.txt
src/drc_translators/: CMakeLists.txt  package.xml
src/ipab_msgs/: CMakeLists.txt  package.xml
(+11282 files in other folders)
